--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -38,7 +38,7 @@
     <section class="sobre__nos">
 
         <div class="img__nosotros">
-            <img src="../assets/nos.png" alt="nos">
+            <img src="../assets/nos.png" alt="nos" class="fotoNos">
         </div>
 
         <div class="historia">
