--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -36,30 +36,30 @@
 
 
     <section class="galeria">
-        <img src="../assets/1.png" alt="1" class="primeraColumna">
-        <img src="../assets/2.png" alt="2" class="segunaColumna">
-        <img src="../assets/3.png" alt="3" class="terceraColumna">
-        <img src="../assets/4.png" alt="4" class="primeraColumna">
-        <img src="../assets/5.png" alt="5" class="segundaColumna">
-        <img src="../assets/6.png" alt="6" class="terceraColumna">
-        <img src="../assets/7.png" alt="7" class="primeraColumna">
-        <img src="../assets/8.png" alt="8" class="segunaColumna">
-        <img src="../assets/9.png" alt="9" class="terceraColumna">
-        <img src="../assets/10.png" alt="10" class="primeraColumna">
-        <img src="../assets/11.png" alt="11" class="segunaColumna">
-        <img src="../assets/12.png" alt="12" class="terceraColumna">
-        <img src="../assets/13.png" alt="13" class="primeraColumna">
-        <img src="../assets/14.png" alt="14" class="segunaColumna">
-        <img src="../assets/15.png" alt="15" class="terceraColumna">
-        <img src="../assets/16.png" alt="16" class="primeraColumna">
-        <img src="../assets/17.png" alt="17" class="segunaColumna">
-        <img src="../assets/18.png" alt="18" class="terceraColumna">
-        <img src="../assets/19.png" alt="19" class="primeraColumna">
-        <img src="../assets/20.png" alt="20" class="segunaColumna">
-        <img src="../assets/21.png" alt="21" class="terceraColumna">
-        <img src="../assets/22.png" alt="22" class="primeraColumna">
-        <img src="../assets/23.png" alt="23" class="segunaColumna">
-        <img src="../assets/24.png" alt="24" class="terceraColumna">
+        <img src="../assets/1.png" alt="1" class="foto">
+        <img src="../assets/2.png" alt="2" class="foto">
+        <img src="../assets/3.png" alt="3" class="foto">
+        <img src="../assets/4.png" alt="4" class="foto">
+        <img src="../assets/5.png" alt="5" class="foto">
+        <img src="../assets/6.png" alt="6" class="foto">
+        <img src="../assets/7.png" alt="7" class="foto">
+        <img src="../assets/8.png" alt="8" class="foto">
+        <img src="../assets/9.png" alt="9" class="foto">
+        <img src="../assets/10.png" alt="10" class="foto">
+        <img src="../assets/11.png" alt="11" class="foto">
+        <img src="../assets/12.png" alt="12" class="foto">
+        <img src="../assets/13.png" alt="13" class="foto">
+        <img src="../assets/14.png" alt="14" class="foto">
+        <img src="../assets/15.png" alt="15" class="foto">
+        <img src="../assets/16.png" alt="16" class="foto">
+        <img src="../assets/17.png" alt="17" class="foto">
+        <img src="../assets/18.png" alt="18" class="foto">
+        <img src="../assets/19.png" alt="19" class="foto">
+        <img src="../assets/20.png" alt="20" class="foto">
+        <img src="../assets/21.png" alt="21" class="foto">
+        <img src="../assets/22.png" alt="22" class="foto">
+        <img src="../assets/23.png" alt="23" class="foto">
+        <img src="../assets/24.png" alt="24" class="foto">
     </section>
 
 
