Se agrega maps, extend, mixin

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -76,6 +76,14 @@
         </form>
     </section>
 
+
+    <section class="contacto">
+        <h6> Nuestras redes sociales </h6>
+        <input type="button" value="Instagram" class="bot--ig" >
+        <input type="button" value="Facebook" class="bot--fb">
+        <input type="button" value="WhatsApp" class="bot--wa">
+    </section>
+
     
     <footer class="footer">
         <a href="../secciones/contacto.html" class="contacto">¡ CONTACTANOS !</a>
