Se agrega descripciones y keywords

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- description & keywords -->
+    <meta name="description" content="¡Bienvenido a Brote! Interiorismo, deco y organización en un solo lugar. Productos personalizados y a medida. Asesoramiento en interiorismo.">
+    <meta name="keywords" content="brote, interiorismo, deco, decoración, organización, pizarrones, pizarra, cuadros, espejos, render, skethup, muebles a medida, equipamiento">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
