--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- description & keywords -->
+    <meta name="description" content="Contactate con BROTE. Dejanos un mensaje o visitá nuestras redes sociales.">
+    <meta name="keywords" content="brote, interiorismo, deco, organización, pizarrones, cuadros, espejos, render, equipamiento, contacto, redes sociales, instagram, facebook, whatsapp">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link css bootstrap -->
