--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- description & keywords -->
+    <meta name="description" content="¿Querés saber más sobre nosotros? ¡Acá te contamos nuestra historia!">
+    <meta name="keywords" content="brote, interiorismo, deco, organización, pizarrones, cuadros, espejos, render, equipamiento, nuestra historia, nosotros, conocenos">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- link css bootstrap -->
@@ -48,7 +53,7 @@
     <section class="sobre__nos">
 
         <div class="img__nosotros">
-            <img src="../assets/nos.png" alt="nos" class="foto__nos">
+            <img src="../assets/nos.png" alt="foto nosotros" class="foto__nos">
         </div>
 
         <div class="historia">
