--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- description & keywords -->
+    <meta name="description" content="¡Mirá todos nuestros productos! Si querés algo especial y a medida, ¡escribinos!">
+    <meta name="keywords" content="brote, interiorismo, deco, organización, render, equipamiento, servicios, asesoramiento, muebles, a medida, skethup">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link css bootstrap -->
@@ -48,19 +53,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/carrusel/vestidor1.png" class="d-block w-100">
+                    <img src="../assets/vestidor1.png" class="d-block w-100" alt="vestidor">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/vestidor2.png" class="d-block w-100">
+                    <img src="../assets/vestidor2.png" class="d-block w-100" alt="vestidor">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/vestidor3.png" class="d-block w-100">
+                    <img src="../assets/vestidor3.png" class="d-block w-100" alt="vestidor">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/vestidor4.png" class="d-block w-100">
+                    <img src="../assets/vestidor4.png" class="d-block w-100" alt="vestidor">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/vestidor5.png" class="d-block w-100">
+                    <img src="../assets/vestidor5.png" class="d-block w-100" alt="vestidor">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -78,13 +83,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/carrusel/mesa1.png" class="d-block w-100">
+                    <img src="../assets/mesa1.png" class="d-block w-100" alt="mesa">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/mesa2.png" class="d-block w-100">
+                    <img src="../assets/mesa2.png" class="d-block w-100" alt="mesa">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/mesa3.png" class="d-block w-100">
+                    <img src="../assets/mesa3.png" class="d-block w-100" alt="mesa">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -102,13 +107,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/carrusel/rack1.png" class="d-block w-100">
+                    <img src="../assets/rack1.png" class="d-block w-100" alt="rack">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/rack2.png" class="d-block w-100">
+                    <img src="../assets/rack2.png" class="d-block w-100" alt="rack">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/rack3.png" class="d-block w-100">
+                    <img src="../assets/rack3.png" class="d-block w-100" alt="rack">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -126,10 +131,10 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/carrusel/escritorio1.png" class="d-block w-100">
+                    <img src="../assets/escritorio1.png" class="d-block w-100" alt="escritorio">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/carrusel/escritorio2.png" class="d-block w-100">
+                    <img src="../assets/escritorio2.png" class="d-block w-100" alt="escritorio">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
