--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -151,16 +151,11 @@
     
     </section>
 
-    <section class="videos">
-         <video width="100%" autoplay controls>
-            <source src="../assets/videos/Dormitorio.mp4" type="video/mp4">
-            Tu navegador no es compatible con videos HTML5
-        </video>
 
-        <video width="100%" autoplay controls>
-            <source src="../assets/videos/Cocina.mp4" type="video/mp4">
-            Tu navegador no es compatible con videos HTML5
-        </video>
+    <section class="videos">
+        <iframe width="100%" height="355" src="https://www.youtube.com/embed/33pOWdO0bOE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <iframe width="100%" height="355" src="https://www.youtube.com/embed/_2hKEygUVl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
    
