--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="../assets/Logo oscuro.png" alt="logo brote" class="logo">
+                <a href="../index.html" class="logo"><img src="../assets/Logo oscuro.png" alt="logo brote"><img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,6 +40,7 @@
             </div>
         </nav>
     </header>
+
 
     <section class="contacto">
         <h6> ¿Nos contactamos? </h6>
@@ -94,7 +95,6 @@
             <h6> © Photo, Inc. 2019. We love our users! </h6>
         </div>
     </footer>
-
 
     <!-- link bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
