--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="../assets/Logo oscuro.png" alt="logo brote" class="logo">
+                <a href="../index.html" class="logo"><img src="../assets/Logo oscuro.png" alt="logo brote"><img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -47,8 +47,8 @@
         <h6> Sobre nosotros </h6>
         <p> <strong>¡Hola!</strong></p>
         <p> Soy Ine Colombo, la cara detrás de BROTE, me alegra mucho que estés acá! </p>
-        <!-- <h5> ¡CONTACTANOS! </h5> -->
     </section>
+
 
     <section class="sobre__nos">
 
@@ -87,5 +87,4 @@
     <!-- link bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
