--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="../assets/Logo oscuro.png" alt="logo brote" class="logo">
+                <a href="../index.html" class="logo"><img src="../assets/Logo oscuro.png" alt="logo brote"><img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
